<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/back_color">

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_tital"
        style="@style/top_text_style"/>
    
      <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
          android:background="@drawable/ta_bg"
         style="@style/some_used"
       >
      <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
         android:layout_marginBottom="10dip"
         >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/arrow_b" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:text="@string/more_fabu"
            android:textSize="15sp" />
        
    </RelativeLayout>
  </LinearLayout>
  
  <com.nian.preferential.ui.SortList
              android:id="@+id/more_list"
              android:layout_marginTop="10dip"
              style="@style/sort_sortlist_style">
  </com.nian.preferential.ui.SortList> 
  
  <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
          android:background="@drawable/ta_bg"
         style="@style/some_used"
       >
      <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
         android:layout_marginBottom="10dip"
         >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/arrow_b" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:text="@string/more_kefu"
            android:textSize="15sp" />
        
    </RelativeLayout>
  </LinearLayout>
</LinearLayout>